--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  video_player: ^2.8.1
+  font_awesome_flutter: ^10.6.0
 
 
   # The following adds the Cupertino Icons font to your application.
